# ghc-simd-tests

./: Makefile  README.mkd  Util.hs  simd.fp  vector.patch
Data/Primitive/: Multi.hs
Data/Primitive/Multi/: DoubleX2.hs  FloatX4.hs  Int32X4.hs  Int64X2.hs
Data/Vector/Fusion/: MultiStream.hs
Data/Vector/Generic/: MultiStream.hs
Data/Vector/Unboxed/: Packed.hs
benchmark/: Main.hs
benchmarks/par-bench/: Main.hs
benchmarks/seq-bench/: Main.hs
benchmarks/sse-bench/: Common.hs  Main.hs
benchmarks/sse-bench/Dotp/: SSE.hs  Scalar.hs
benchmarks/sse-bench/Kahan/: SSE.hs  Scalar.hs
benchmarks/sse-bench/Kde/: SSE.hs  Scalar.hs
benchmarks/sse-bench/Rbf/: SSE.hs  Scalar.hs
benchmarks/sse-bench/Saxpy/: SSE.hs  (+1 more)
common/: Vector.hs
common/Util/: Benchmark.hs  MmMalloc.c  MmMalloc.hs  Random.hs  Statistics.hs  Time.hs  Unsafe.hs  time.c
criterion/: Criterion.hs
examples/dotp/: Hand.hs  Main.hs  Multi.hs  Single.hs
examples/intsum/: Main.hs  MultiLazy.hs  MultiStrict.hs  SingleLazy.hs  SingleStrict.hs
examples/prim/: Main.hs
examples/roman/: Main.hs
examples/saxpy/: Main.hs  Multi.hs  Single.hs
examples/sum/: Adapt.hs  Main.hs  MultiLazy.hs  MultiStrict.hs  SingleLazy.hs  SingleStrict.hs
examples/test/: Main.hs
include/: vector.h
multivector/: multivector.cabal
multivector/Data/Primitive/: Multi.hs
multivector/Data/Vector/Generic/: MultiStream.hs
multivector/Data/Vector/Unboxed/: Packed.hs
patches/: llvm-2.9.patch  llvm-3.0.patch
plot/: par-bench-plot.py  plot.py  plotprefs.py
tests/sanity/: Main.hs
util/: OldFold.hs  Util.hs
(+92 files in other folders)
