name:           multivector
version:        0.1
license:        BSD3
license-file:   LICENSE
author:         Geoffrey Mainland <gmainlan@microsoft.com>
maintainer:     Geoffrey Mainland <gmainlan@microsoft.com>
copyright:      (c) Microsoft Coporation 2011-2012
homepage:       https://github.com/mainland/ghc-simd-tests
bug-reports:    https://github.com/mainland/ghc-simd-tests/issues
category:       Data, Data Structures
synopsis:       Efficient Arrays
description:
  Experimental support for processing vectors using @Multi a@'s, i.e., SIMD
  vectors. This library will not be further developed or maintainer---its
  functionality is being integrated with the @vector@ library.

cabal-version:  >= 1.2

build-type:     Simple

library
  exposed-modules:
    Data.Primitive.Multi
    Data.Primitive.Multi.DoubleX2
    Data.Primitive.Multi.FloatX4
    Data.Primitive.Multi.Int32X4
    Data.Primitive.Multi.Int64X2

    Data.Vector.Fusion.MultiStream
    Data.Vector.Fusion.MultiStream.Monadic
    Data.Vector.Generic.MultiStream
    Data.Vector.Unboxed.Packed

  build-depends:
    base >= 4 && < 5,
    primitive >= 0.4.0.1 && < 0.5,
    ghc-prim,
    vector >= 0.9 && < 1

  ghc-options: -O2 -fllvm
